[project]
name = "ragenterprise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "deepeval>=4.0.7",
    "fastapi>=0.139.0",
    "flashrank>=0.2.10",
    "google-generativeai>=0.8.6",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.0.10",
    "langchain-google-vertexai>=2.1.2",
    "langchain-groq>=0.3.8",
    "langchain-nvidia-ai-endpoints>=0.3.19",
    "langchain-openai>=0.3.35",
    "langfuse>=4.13.0",
    "langgraph>=1.0.1",
    "langsmith>=0.9.7",
    "logfire[fastapi,requests]>=4.37.0",
    "loguru>=0.7.3",
    "nemoguardrails>=0.11.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "portkey-ai>=2.3.2",
    "pydantic>=2.0.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "unstructured>=0.18.32",
    "uvicorn[standard]>=0.49.0",
]
